# GarraRUST

./: .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md  deny.toml  install.sh  release.md
.cargo/: audit.toml
.claude/: superpowers-config.md
.claude/hooks/: post-tool-use.sh  pre-tool-use.sh  session-start.sh
.github/: dependabot.yml
.github/workflows/: branch-cleanup.yml  ci.yml  codeql.yml  deploy.yml  garra-routine-trigger.yml  mutants.yml  quality-ratchet.yml  release.yml
apps/garraia-mobile/: README.md  pubspec.yaml
crates/garraia-auth/: Cargo.toml  build.rs
crates/garraia-cli/: Cargo.toml
crates/garraia-embeddings/: Cargo.toml  README.md
crates/garraia-embeddings/src/: error.rs  hybrid.rs  lib.rs  provider.rs  store.rs  types.rs
crates/garraia-glob/: Cargo.toml
crates/garraia-learning/: Cargo.toml
crates/garraia-learning/src/: evaluator.rs  generator.rs  lib.rs  miner.rs  registry.rs  retriever.rs  safety.rs  skill_override.rs  updater.rs  versioning.rs
crates/garraia-telemetry/: Cargo.toml
crates/garraia-telemetry/src/: lib.rs  tracer.rs
crates/garraia-telemetry/tests/: smoke.rs
docs/: SKILL_CONTRATO_ANTI_ALUCINACAO.md  anti-hallucination-guard-2026-06-18.md  cli-ask.md  cli-mcp-server.md  configuration.md  deployment-runpod.md  installation.md  voice.md
plans/: 0080-gar-541-task-activity-api.md  0081-gar-466-q64-unique-violation-mutant.md  0082-gar-544-task-move-api.md  0083-gar-546-task-subtasks-api.md  0084-gar-549-search-api-slice1.md  0085-gar-551-search-api-slice2-chat-user-scope.md  0086-gar-552-search-api-slice3-date-author-filters.md  0087-gar-553-aws-sdk-s3-drop-legacy-rustls-chain.md  0088-gar-555-files-api-slice1.md  0089-gar-557-files-api-slice2-rename.md  0090-gar-559-files-api-slice3-get-single.md  0091-gar-561-files-api-slice4-folder-rename.md  0092-gar-562-files-api-slice5-folder-post-delete.md  0093-gar-564-files-api-slice6-download.md  0094-gar-565-files-api-slice7-new-version.md  0095-gar-569-files-api-slice8-list-versions.md  0096-gar-572-task-attachments-api.md  0097-gar-574-groups-members-invites-api.md  0098-gar-576-cli-openrouter-model-respect.md  0099-gar-577-files-api-slice9-create.md  0100-gar-579-cli-non-interactive-ask.md  0101-gar-582-cli-openrouter-provider-name.md  0102-gar-583-mcp-server-stdio.md  0103-gar-585-mcp-tools-capability.md  0104-gar-587-mcp-garra-ask-defaults.md  0105-gar-580-groups-list-api.md  0106-gar-589-rls-groups-and-members.md  0107-gar-592-messages-edit-delete.md  0108-gar-593-lru-advisory-cleanup.md  0109-gar-595-messages-get-single-threads.md  0110-gar-599-task-list-get-patch-me.md  0111-gar-600-patch-minor-batch-may13.md  0112-gar-465-sessions-ttl-boundary.md  0113-gar-601-aws-actions-v6.md  0114-gar-483-debug-redaction-signup-app-pools.md  0115-gar-604-chats-dm-creation.md  0116-gar-605-codeql-actions-language.md  0117-gar-618-web-console-pr4-dashboard.md  0124-gar-620-metrics-yanked-0246.md  0125-gar-623-bookkeeping-plan0123-pr341-self-ref.md  (+207 more)
scripts/: build-installer.ps1  test-hooks.sh
skills/: garra-cli-operator.md
tests/: package-lock.json  package.json
(+180 files in other folders)
