[package]
name = "garraia-learning"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Garra Learning Agent — skill mining, generation, evaluation and lifecycle management"

[dependencies]
garraia-common = { workspace = true }
garraia-skills = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
