[package]
name = "garraia-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenTelemetry + tracing baseline for GarraIA"

[dependencies]
# Tracing ecosystem (workspace-provided)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# OpenTelemetry (direct versions — not in workspace)
# Upgraded from 0.26 → 0.32 (plan 0252 / GAR-711 / RUSTSEC-2025-0052 async-std removed)
tracing-opentelemetry = "0.33"
opentelemetry = { version = "0.32", features = ["trace"] }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic", "trace"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# HTTP layers
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
axum = { version = "0.8" }

# Validation + ids
validator = { version = "0.20", features = ["derive"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tokio = { workspace = true }
tracing-test = "0.2"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "testing"] }
opentelemetry = { version = "0.32", features = ["trace"] }
